--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kobeissidev.jetpackcomposespotifyui">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/MyTheme"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/MyTheme">
         <activity
             android:name=".MainActivity"
             android:exported="true"
